--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ background-image: url("../images/bg1.png");
 	border-style: groove;
 	margin-top: 5px;
 	margin-bottom: 5px;
+	height: auto;
+
 }
 
 #rules {
